setup application messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,22 @@
-typeMismatch = Invalid date format
+app.title = Переговорка
+app.const.logout = Выйти
+app.const.newEvent = Новое событие
+app.const.addEvent = Добавить событие
+app.const.title = Заголовок
+app.const.startTime = Время начала
+app.const.endTime = Время окончания
+app.const.remove = Удалить
+app.const.create = Создать
+app.const.addMember = Добавить участника
+app.const.memberEmailPlaceholder = Email участника...
+app.const.today = Сегодня
+app.const.selectDateAndTime = Выберите дату и время
+app.const.pick = Выбрать
+event.title.validation.notEmpty.message = Заголовок не должен быть пустым
+event.title.validation.length.message = Заголовок не должен содержать менее {min} и больше {max} символов
+event.date.validation.notEmpty.message = Дата не должна быть пустой
+event.date.validation.futureOrPresent.message = Дата не должна быть прошедшей
+event.members.validation.email.message = Email адрес должен быть корректным
+event.duration.validation.message = Длительность события не должна превышать 24 часа и быть меньше 30 минут
+event.period.validation.message = События не должны перекрывать друг друга по времени
+typeMismatch = Дата должна иметь корректный формат
