setup custom authorization form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,10 @@ app.const.memberEmailPlaceholder = Email участника...
 app.const.today = Сегодня
 app.const.selectDateAndTime = Выберите дату и время
 app.const.pick = Выбрать
+app.const.loginTitle = Авторизация
+app.const.username = Имя пользователя
+app.const.password = Пароль
+app.const.loginAction = Войти
 event.title.validation.notEmpty.message = Заголовок не должен быть пустым
 event.title.validation.length.message = Заголовок не должен содержать менее {min} и больше {max} символов
 event.date.validation.notEmpty.message = Дата не должна быть пустой
