setup editing and viewing functionality

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,9 @@ app.const.loginTitle = Авторизация
 app.const.username = Имя пользователя
 app.const.password = Пароль
 app.const.loginAction = Войти
+app.const.editEvent = Редактировать событие
+app.const.viewEvent = Просмотр события
+app.const.store = Сохранить
 event.title.validation.notEmpty.message = Заголовок не должен быть пустым
 event.title.validation.length.message = Заголовок не должен содержать менее {min} и больше {max} символов
 event.date.validation.notEmpty.message = Дата не должна быть пустой
