add success messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,11 @@ app.const.loginAction = Войти
 app.const.editEvent = Редактировать событие
 app.const.viewEvent = Просмотр события
 app.const.store = Сохранить
+app.const.successLoginMessage = Вы успешно авторизовались
+app.const.successLogoutMessage = Вы успешно вышли из учётной записи
+app.const.successEventAdditionMessage = Вы успешно создали событие
+app.const.successEventEditionMessage = Вы успешно отредактировали событие
+app.const.successEventDeletionMessage = Вы успешно удалили событие
 event.title.validation.notEmpty.message = Заголовок не должен быть пустым
 event.title.validation.length.message = Заголовок не должен содержать менее {min} и больше {max} символов
 event.date.validation.notEmpty.message = Дата не должна быть пустой
